--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tech Chronicles</title>
+    <link rel="shortcut icon" href="tech_chronicles_round_favicon_transparent.png" type="image/x-icon">
 <link rel="stylesheet" href="blog.css">
 </head>
 <body class="body_container">
